fix Learning Objective arrow alignment #1985

--- a/css/ccap-astronomy.css
+++ b/css/ccap-astronomy.css
@@ -2983,16 +2983,14 @@ div.book div > div.section > div.section > div.section div.titlepage > div > div
   margin-left: 10px;
   color: #3C2747;
   margin-bottom: 18px;
-  list-style: none;
 }
 .section > .titlepage .abstract .listitem {
   background: url("ccap-basic-math/learning-objectives.png") no-repeat 0;
   background-size: 3px 4px;
   padding-left: 10px;
-  background: url("ccap-astronomy/learning-objectives.svg") no-repeat 0 60%;
-  background-size: 7px 10px;
+  background: none;
   margin-left: 20px;
-  padding-left: 20px;
+  padding-left: 0;
 }
 .section > .titlepage .abstract p {
   font-family: 'Noto Sans', sans-serif, STIXGeneral, STIXSizeOneSym, STIXSize1;
@@ -5396,16 +5394,18 @@ div.book div > div.section > div.section.learning-objectives .itemizedlist > ul 
   margin-left: 10px;
   color: #3C2747;
   margin-bottom: 18px;
-  list-style: none;
 }
 div.book div > div.section > div.section.learning-objectives .listitem {
   background: url("ccap-basic-math/learning-objectives.png") no-repeat 0;
   background-size: 3px 4px;
   padding-left: 10px;
-  background: url("ccap-astronomy/learning-objectives.svg") no-repeat 0 60%;
-  background-size: 7px 10px;
+  background: none;
   margin-left: 20px;
-  padding-left: 20px;
+  padding-left: 0;
+}
+div.book div > div.section > div.section.learning-objectives .listitem::marker {
+  width: 5px;
+  content: url("ccap-astronomy/learning-objectives.svg");
 }
 div.book div > div.section > div.section.learning-objectives .listitem p {
   margin-bottom: 0;
