--- a/css/refactor/astronomy-skeleton.less
+++ b/css/refactor/astronomy-skeleton.less
@@ -201,6 +201,10 @@ div.book div > div.section > div.section.learning-objectives {
   .listitem {
     #part>#chapter>#learning-objectives>#list>#listitem>.style();
 
+    &::marker {
+      #part>#chapter>#learning-objectives>#list>#listitem>.marker();
+    }
+
     p { margin-bottom: 0; }
   }
 }
