--- a/css/refactor/astronomy-slots.less
+++ b/css/refactor/astronomy-slots.less
@@ -236,14 +236,16 @@
         .style() {
           color: @tertiary-color;
           margin-bottom: 18px;
-          list-style: none;
         }
         #listitem {
           .style() {
-            background: url("ccap-astronomy/learning-objectives.svg") no-repeat 0 60%;
-            background-size: 7px 10px;
+            background: none;
             margin-left: 20px;
-            padding-left: 20px;
+            padding-left: 0;
+          }
+          .marker() {
+            width: 5px;
+            content: url("ccap-astronomy/learning-objectives.svg");
           }
         }
       }
